--- a/index.html
+++ b/index.html
@@ -24,18 +24,21 @@
             border-bottom: 1px solid #f4f4f4;
             z-index: 1;
         }
-        .dimension-start::before, .dimension-end::after {
+        .dimension-start, .dimension-end {
             position: absolute;
             color: #f01201;
             z-index: 1;
         }
+        .dimension-start::before, .dimension-end::before {
+            position: absolute;
+        }
         .dimension-start::before {
             content: '{';
-            margin-left: -0.2em;
+            left: -0.1em;
         }
-        .dimension-end::after {
+        .dimension-end::before {
             content: '}';
-            margin-left: -0.2em;   
+            right: -0.1em;
         }
         .dimension-main {
             display: flex;
