--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
     <div class="dimension-button">
         <button id="add-btn">标注</button>
         <button id="del-btn">删除</button>
+        <button id="mount-btn">回显</button>
         <span id="tip-btn"></span>
     </div>
     <div class="dimension-main">
@@ -127,6 +128,27 @@
             <div class="dimension-list"></div> -->
         </div>
     </div>
+    <script>
+        (function () {
+            return
+            const text = {
+                a: 'aaaaa',
+                b: 'bbbbb'
+            }
+            const list = [
+                `111<dimension data-key="a"><span class="dimension-side start" data-key="a"></span>aaaa<span class="dimension-side end" data-key="a"></span></dimension>111`,
+                `111<dimension data-key="b"><span class="dimension-side start" data-key="b"></span>bbbb<span class="dimension-side end" data-key="b"></span></dimension>111`,
+                `333<dimension data-key="c,d"><span class="dimension-side start" data-key="c"></span><span class="dimension-side start" data-key="d"></span>abab<span class="dimension-side end" data-key="d"></span><span class="dimension-side end" data-key="c"></span></dimension>333`,
+            ]
+            const contain = document.createDocumentFragment()
+            list.forEach(item => {
+                const p = document.createElement('p')
+                p.innerText = item
+                contain.appendChild(p)
+            })
+            document.querySelector('.dimension-contain').appendChild(contain)
+        })()
+    </script>
     <script type="module">
         import Dimension from './dimension.js'
         const dimension = new Dimension({
@@ -138,6 +160,9 @@
         })
         document.querySelector('#del-btn').addEventListener('click', () => {
             dimension.remove()
+        })
+        document.querySelector('#mount-btn').addEventListener('click', () => {
+            dimension.mount()
         })
     </script>
     <script>
