feat: 标注插件封装

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
             <div>00000</div>
         </div>
         <div class="dimension-text">
-            <!-- <div class="dimension-lines"></div>
-            <div class="dimension-list"></div> -->
+            <div class="dimension-lines"></div>
+            <div class="dimension-list"></div>
         </div>
     </div>
     <script>
