feat: 标注插件封装

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         })()
     </script>
     <script type="module">
-        import Dimension from './dimension.js'
+        import Dimension from './dimension-new.js'
         const dimension = new Dimension({
             entry: '.dimension-contain',
             output: '.dimension-text',
