feat: 标注插件封装

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             position: relative;
             background-color: #ffd5d5;
         }
+        dimension.active {
+            background-color: #ffa8a8;
+        }
         .dimension-button {
             position: sticky;
             top: 0;
@@ -87,7 +90,7 @@
             margin-top: 1px;
         }
         .dimension-item.active {
-            /* border-width: 2px; */
+            outline: 1px solid #f01201;
             background-color: #ffa8a8;
         }
         .dimension-label {
