feat: 标注插件封装

--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
             border-left: 1px dashed #f01201;
         }
         .dimension-item.active .dimension-item-line {
+            left: -2px;
+            border-left-width: 2px;
             border-left-style: solid;
         }
         .dimension-item-line.top {
-            top: 10px;
             transform-origin: right top;
         }
         .dimension-item-line.bottom {
-            bottom: calc(100% - 10px);
             transform-origin: right bottom;
         }
         #tip-btn {
